<resources>
    <string name="app_name">Solutions-Electronics</string>
    <string name="title_activity_products">products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_productdetail">productdetail</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="address">Forman Christian College (A Chartered University), Zahoor Elahi Rd, Gulberg III, Lahore, Punjab 54600</string>
    <string name="number"><u>+923238479429</u></string>
    <string name="number2"><u>+923228493494</u></string>
    <string name="mail"><u>20-10596@formanite.fccollege.edu.pk</u></string>
    <string name="mail2"><u>20-@formanite.fccollege.edu.pk</u></string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_maps">Map</string>


</resources>
