<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactus">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:background="#E2E1E1"
        android:src="@drawable/fcc"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:id="@+id/address">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_toLeftOf="@+id/map"
            android:textColor="@color/md_blue_900"
            android:text="@string/address"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/map"
            android:id="@+id/map"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:layout_alignParentRight="true"/>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:id="@+id/contact1"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:textColor="@color/md_blue_300"
            android:padding="5dp"
            android:id="@+id/number"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/call"
            android:id="@+id/call"
            android:background="#00FFFFFF"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contact1"
        android:id="@+id/email1"

        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            android:textColor="@color/md_blue_300"
            android:padding="5dp"
            android:id="@+id/email"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/mail"
            android:id="@+id/email_icon"
            android:background="#00FFFFFF"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email1"
        android:id="@+id/contact2"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number2"
            android:textSize="20sp"
            android:textColor="@color/md_blue_300"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:id="@+id/number2"

            />

        <ImageButton
            android:layout_width="wrap_content"
            android:src="@drawable/call"
            android:id="@+id/call_icon"
            android:background="#00FFFFFF"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mail2"

        android:layout_below="@+id/contact2"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail2"
            android:textSize="20sp"

            android:layout_centerVertical="true"
            android:textColor="@color/md_blue_300"
            android:padding="5dp"
            android:id="@+id/email2"

            />

        <ImageButton
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:src="@drawable/mail"
            android:id="@+id/email2_icon"
            android:background="#00FFFFFF"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>



</RelativeLayout>